--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 <body>
-    content
+    <main class="container">
+        <header class="top-part">
+            <img src="./img/AdidasLogo.png" alt="logo">
+            <div class="top-navigation">
+                <nav class="links">
+                    <a href="#">home</a>
+                    <a href="#">he's</a>
+                    <a href="#">her's</a>
+                    <a href="#">about us</a>
+                    <a href="#">contact us</a>
+                </nav>
+                <div class="top-icons">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+                    <i class="fa fa-user-o" aria-hidden="true"></i>
+                </div>
+            </div>
+        </header>
+        <div class="main-face">
+            <div class="text">
+                <img src="./img/shoes1.png" alt="shoes1">
+                <h1>adidas shoes</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quas quibusdam corporis.</p>
+                <p class="price">$150.00</p>
+                <button type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+            </div>
+            <div class="pages">
+                <h2>.01</h2>
+            </div>
+            <div class="slider">
+                <i class="fa fa-sliders" aria-hidden="true"></i>
+            </div>
+            <div class="social-media">
+                <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com" target="_blank"></a>
+                <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com" target="_blank"></a>
+                <a class="fa fa-linkedin" aria-hidden="true" href="http://www.linkedin.com" target="_blank"></a>
+                <a class="fa fa-tumblr" aria-hidden="true" href="http://www.tumbler.com" target="_blank"></a> 
+            </div>
+        </div>
+    </main>
 </body>
 </html>
