--- a/index.html
+++ b/index.html
@@ -9,45 +9,49 @@
     <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 <body>
+    <header class="container">
+        <img class="logo" src="./img/AdidasLogo.png" alt="Logo">
+        <nav>
+            <a class="active" href="#">Home</a>
+            <a href="#">He's</a>
+            <a href="#">She's</a>
+            <a href="#">About us</a>
+            <a href="#">Contact us</a>
+        </nav>
+        <div class="user-actions">
+            <i class="fa fa-search"></i>
+            <i class="fa fa-shopping-cart"></i>
+            <i class="fa fa-user-o"></i>
+        </div>
+    </header>
+
     <main class="container">
-        <header class="top-part">
-            <img src="./img/AdidasLogo.png" alt="logo">
-            <div class="top-navigation">
-                <nav class="links">
-                    <a href="#">home</a>
-                    <a href="#">he's</a>
-                    <a href="#">her's</a>
-                    <a href="#">about us</a>
-                    <a href="#">contact us</a>
-                </nav>
-                <div class="top-icons">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                    <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-                    <i class="fa fa-user-o" aria-hidden="true"></i>
-                </div>
+        <div class="about">
+            <h1>adidas shoes</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, blanditiis libero.</p>
+            <div class="price">$150.00</div>
+            <a href="#">
+                <span>Shop now</span>
+                <i class="fa fa-arrow-right"></i>
+            </a>
+        </div>
+        <div class="number">01.</div>
+        <div class="socials">
+            <a href="#" target="_blank" class="fa fa-twitter"></a>
+            <a href="#" target="_blank" class="fa fa-facebook"></a>
+            <a href="#" target="_blank" class="fa fa-linkedin"></a>
+            <a href="#" target="_blank" class="fa fa-tumblr"></a>
+        </div>
+        <div class="pagination">
+            <div class="top">
+                <div class="current-item">01</div>
+                <div class="total-items">06</div>
             </div>
-        </header>
-        <div class="main-face">
-            <div class="text">
-                <img src="./img/shoes1.png" alt="shoes1">
-                <h1>adidas shoes</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quas quibusdam corporis.</p>
-                <p class="price">$150.00</p>
-                <button type="button"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-            </div>
-            <div class="pages">
-                <h2>.01</h2>
-            </div>
-            <div class="slider">
-                <i class="fa fa-sliders" aria-hidden="true"></i>
-            </div>
-            <div class="social-media">
-                <a class="fa fa-twitter" aria-hidden="true" href="http://www.twitter.com" target="_blank"></a>
-                <a class="fa fa-facebook" aria-hidden="true" href="http://www.facebook.com" target="_blank"></a>
-                <a class="fa fa-linkedin" aria-hidden="true" href="http://www.linkedin.com" target="_blank"></a>
-                <a class="fa fa-tumblr" aria-hidden="true" href="http://www.tumbler.com" target="_blank"></a> 
+            <div class="bar">
+                <div class="value"></div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
