--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Shoes</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./img/favicon.png" type="image/png">
 </head>
 <body>
     <header class="container">
