--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./img/favicon.png" type="image/png">
 </head>
 <body>
+    <div class="background"></div>
     <header class="container">
         <img class="logo" src="./img/AdidasLogo.png" alt="Logo">
         <nav>
