--- a/shoes2/index.html
+++ b/shoes2/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="./img/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
+    <link rel="stylesheet" href="../img/favicon.png" type="image/png">
 </head>
 <body>
     <div class="background">
     <header class="container">
-        <img class="logo" src="./img/AdidasLogo.png" alt="Logo">
+        <img class="logo" src="../img/AdidasLogo.png" alt="Logo">
         <nav>
             <a class="active" href="#">Home</a>
             <a href="#">He's</a>
@@ -37,7 +37,7 @@
                 <i class="fa fa-arrow-right"></i>
             </a>
         </div>
-        <div class="number">01.</div>
+        <div class="number">02.</div>
         <div class="socials">
             <a href="#" target="_blank" class="fa fa-twitter"></a>
             <a href="#" target="_blank" class="fa fa-facebook"></a>
