--- a/shoes3/index.html
+++ b/shoes3/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/shoes3.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="../img/favicon.png" type="image/png">
 </head>
 <body>
-    <div class="background">
+    
     <header class="container">
         <img class="logo" src="../img/AdidasLogo.png" alt="Logo">
         <nav>
@@ -54,7 +55,7 @@
             </div>
         </div>
     </main>
-</div>
+
 </body>
 
 </html>
