--- a/shoes3/index.html
+++ b/shoes3/index.html
@@ -53,9 +53,9 @@
             <div class="bar">
                 <div class="value"></div>
                 <div class="sliderbar">              
-                    <div class="slider-static"><a class="link" href="../shoes2/index.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
-                    <div class="slider-static"><a class="link" href="../index.html"><img width="100%" height="100%" src="./img/button.png" alt=""></a></div>
-                    <div class="slider-active"><img width="100%" height="100%" src="./img/button.png" alt=""></div>
+                    <div class="slider-static"><a class="link" href="../shoes2/index.html"><img width="100%" height="100%" src="../img/button.png" alt=""></a></div>
+                    <div class="slider-static"><a class="link" href="../index.html"><img width="100%" height="100%" src="../img/button.png" alt=""></a></div>
+                    <div class="slider-active"><img width="100%" height="100%" src="../img/button.png" alt=""></div>
                 </div>
             </div>
         </div>
