--- a/shoes3/index.html
+++ b/shoes3/index.html
@@ -48,14 +48,14 @@
         <div class="pagination">
             <div class="top">
                 <div class="current-item">01</div>
-                <div class="total-items">06</div>
+                <div class="total-items">03</div>
             </div>
             <div class="bar">
                 <div class="value"></div>
                 <div class="sliderbar">              
-                    <div class="slider-static"><a class="link" href="../shoes2/index.html"><img width="100%" height="100%" src="../img/button.png" alt=""></a></div>
-                    <div class="slider-static"><a class="link" href="../index.html"><img width="100%" height="100%" src="../img/button.png" alt=""></a></div>
-                    <div class="slider-active"><img width="100%" height="100%" src="../img/button.png" alt=""></div>
+                    <div class="slider-static"><a class="link" href="../index.html"><img width="100%" height="100%" src="../img/button1.png" alt=""></a></div>
+                    <div class="slider-static"><a class="link" href="../shoes2/index.html"><img width="100%" height="100%" src="../img/button1.png" alt=""></a></div>
+                    <div class="slider-active"><img width="100%" height="100%" src="../img/button1.png" alt=""></div>
                 </div>
             </div>
         </div>
